// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatHeader /> should render default image 1`] = `
<header>
  <div
    className="chat-header"
  >
    <Avatar
      rounded={true}
      size="small"
    />
    <span
      className="name"
    >
      Dumb
    </span>
  </div>
</header>
`;

exports[`<ChatHeader /> should render given image 1`] = `
<header>
  <div
    className="chat-header"
  >
    <Avatar
      rounded={true}
      size="small"
      source="img/foo.jpg"
    />
    <span
      className="name"
    >
      Dumb
    </span>
  </div>
</header>
`;
